osc2parser/openscenario2Parser.py
# Generated from openscenario2.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class openscenario2Parser ( Parser ):

    grammarFileName = "openscenario2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'.'", "'list'", "'of'", "'int'", 
                     "'uint'", "'float'", "'bool'", "'string'", "'type'", 
                     "'is'", "'unit'", "'SI'", "'('", "')'", "','", "':'", 
                     "'factor'", "'offset'", "'kg'", "'m'", "'s'", "'A'", 
                     "'K'", "'mol'", "'cd'", "'rad'", "'enum'", "'['", "']'", 
                     "'='", "'struct'", "'inherits'", "'=='", "'actor'", 
                     "'scenario'", "'action'", "'modifier'", "'extend'", 
                     "'event'", "'if'", "'@'", "'as'", "'rise'", "'fall'", 
                     "'elapsed'", "'every'", "'var'", "'sample'", "'with'", 
                     "'keep'", "'default'", "'hard'", "'remove_default'", 
                     "'def'", "'->'", "'expression'", "'undefined'", "'external'", 
                     "'only'", "'cover'", "'record'", "'on'", "'do'", "'serial'", 
                     "'one_of'", "'parallel'", "'wait'", "'emit'", "'call'", 
                     "'until'", "'?'", "'=>'", "'or'", "'and'", "'not'", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'in'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "')?'", "'it'", "'range'", 
                     "'..'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STRING_LITERAL", "SHORTSTRING", "LONGSTRING", "BOOL_LITERAL", 
                      "INTEGER_LITERAL", "UINT_LITERAL", "HEX_UINT_LITERAL", 
                      "INT_LITERAL", "DIGIT", "HEX_DIGIT", "FLOAT_LITERAL", 
                      "IDENTIFIER", "PHYSICAL_LITERAL", "UNIT_NAME", "LINEJOINER", 
                      "NEWLINE", "WS", "COMMENT", "INDENT", "DEDENT" ]

    RULE_osc_file = 0
    RULE_prelude_statement = 1
    RULE_import_statement = 2
    RULE_import_reference = 3
    RULE_structured_identifier = 4
    RULE_osc_declaration = 5
    RULE_type_declarator = 6
    RULE_non_aggregate_type_declarator = 7
    RULE_declared_type_name = 8
    RULE_aggregate_type_declarator = 9
    RULE_list_type_declarator = 10
    RULE_primitive_type = 11
    RULE_physical_type_declaration = 12
    RULE_unit_declaration = 13
    RULE_base_unit_specifier = 14
    RULE_unit_specifier = 15
    RULE_si_base_unit_specifier = 16
    RULE_si_base_exponent_list = 17
    RULE_si_base_exponent = 18
    RULE_si_unit_specifier = 19
    RULE_si_factor = 20
    RULE_si_offset = 21
    RULE_si_base_unit_name = 22
    RULE_enum_declaration = 23
    RULE_enum_member_decl = 24
    RULE_enum_name = 25
    RULE_enum_member_name = 26
    RULE_enum_member_value = 27
    RULE_enum_value_reference = 28
    RULE_struct_declaration = 29
    RULE_struct_member_decl = 30
    RULE_struct_name = 31
    RULE_field_name = 32
    RULE_actor_declaration = 33
    RULE_actor_member_decl = 34
    RULE_actor_name = 35
    RULE_scenario_declaration = 36
    RULE_scenario_member_decl = 37
    RULE_qualified_behavior_name = 38
    RULE_behavior_name = 39
    RULE_action_declaration = 40
    RULE_modifier_declaration = 41
    RULE_modifier_name = 42
    RULE_type_extension = 43
    RULE_enum_type_extension = 44
    RULE_structured_type_extension = 45
    RULE_extendable_type_name = 46
    RULE_extension_member_decl = 47
    RULE_event_declaration = 48
    RULE_event_specification = 49
    RULE_event_reference = 50
    RULE_event_field_decl = 51
    RULE_event_field_name = 52
    RULE_event_name = 53
    RULE_event_path = 54
    RULE_event_condition = 55
    RULE_rise_expression = 56
    RULE_fall_expression = 57
    RULE_elapsed_expression = 58
    RULE_every_expression = 59
    RULE_bool_expression = 60
    RULE_duration_expression = 61
    RULE_field_declaration = 62
    RULE_parameter_declaration = 63
    RULE_variable_declaration = 64
    RULE_sample_expression = 65
    RULE_default_value = 66
    RULE_parameter_with_declaration = 67
    RULE_parameter_with_member = 68
    RULE_constraint_declaration = 69
    RULE_keep_constraint_declaration = 70
    RULE_constraint_qualifier = 71
    RULE_constraint_expression = 72
    RULE_remove_default_declaration = 73
    RULE_parameter_reference = 74
    RULE_method_declaration = 75
    RULE_return_type = 76
    RULE_method_implementation = 77
    RULE_method_qualifier = 78
    RULE_method_name = 79
    RULE_coverage_declaration = 80
    RULE_modifier_application = 81
    RULE_behavior_specification = 82
    RULE_on_directive = 83
    RULE_on_member = 84
    RULE_do_directive = 85
    RULE_do_member = 86
    RULE_label_name = 87
    RULE_composition = 88
    RULE_composition_operator = 89
    RULE_behavior_invocation = 90
    RULE_behavior_with_declaration = 91
    RULE_behavior_with_member = 92
    RULE_actor_expression = 93
    RULE_wait_directive = 94
    RULE_emit_directive = 95
    RULE_call_directive = 96
    RULE_method_invocation = 97
    RULE_until_directive = 98
    RULE_argument_list_specification = 99
    RULE_argument_specification = 100
    RULE_argument_name = 101
    RULE_argument_list = 102
    RULE_positional_argument = 103
    RULE_named_argument = 104
    RULE_expression = 105
    RULE_ternary_op_exp = 106
    RULE_implication = 107
    RULE_disjunction = 108
    RULE_conjunction = 109
    RULE_inversion = 110
    RULE_relation = 111
    RULE_relational_op = 112
    RULE_sum_exp = 113
    RULE_additive_op = 114
    RULE_term = 115
    RULE_multiplicative_op = 116
    RULE_factor = 117
    RULE_postfix_exp = 118
    RULE_field_access = 119
    RULE_primary_exp = 120
    RULE_value_exp = 121
    RULE_list_constructor = 122
    RULE_range_constructor = 123
    RULE_string_literal = 124
    RULE_bool_literal = 125
    RULE_integer_literal = 126
    RULE_uint_literal = 127
    RULE_hex_uint_literal = 128
    RULE_float_literal = 129
    RULE_identifier = 130
    RULE_physical_literal = 131
    RULE_unit_name = 132

    ruleNames =  [ "osc_file", "prelude_statement", "import_statement", 
                   "import_reference", "structured_identifier", "osc_declaration", 
                   "type_declarator", "non_aggregate_type_declarator", "declared_type_name", 
                   "aggregate_type_declarator", "list_type_declarator", 
                   "primitive_type", "physical_type_declaration", "unit_declaration", 
                   "base_unit_specifier", "unit_specifier", "si_base_unit_specifier", 
                   "si_base_exponent_list", "si_base_exponent", "si_unit_specifier", 
                   "si_factor", "si_offset", "si_base_unit_name", "enum_declaration", 
                   "enum_member_decl", "enum_name", "enum_member_name", 
                   "enum_member_value", "enum_value_reference", "struct_declaration", 
                   "struct_member_decl", "struct_name", "field_name", "actor_declaration", 
                   "actor_member_decl", "actor_name", "scenario_declaration", 
                   "scenario_member_decl", "qualified_behavior_name", "behavior_name", 
                   "action_declaration", "modifier_declaration", "modifier_name", 
                   "type_extension", "enum_type_extension", "structured_type_extension", 
                   "extendable_type_name", "extension_member_decl", "event_declaration", 
                   "event_specification", "event_reference", "event_field_decl", 
                   "event_field_name", "event_name", "event_path", "event_condition", 
                   "rise_expression", "fall_expression", "elapsed_expression", 
                   "every_expression", "bool_expression", "duration_expression", 
                   "field_declaration", "parameter_declaration", "variable_declaration", 
                   "sample_expression", "default_value", "parameter_with_declaration", 
                   "parameter_with_member", "constraint_declaration", "keep_constraint_declaration", 
                   "constraint_qualifier", "constraint_expression", "remove_default_declaration", 
                   "parameter_reference", "method_declaration", "return_type", 
                   "method_implementation", "method_qualifier", "method_name", 
                   "coverage_declaration", "modifier_application", "behavior_specification", 
                   "on_directive", "on_member", "do_directive", "do_member", 
                   "label_name", "composition", "composition_operator", 
                   "behavior_invocation", "behavior_with_declaration", "behavior_with_member", 
                   "actor_expression", "wait_directive", "emit_directive", 
                   "call_directive", "method_invocation", "until_directive", 
                   "argument_list_specification", "argument_specification", 
                   "argument_name", "argument_list", "positional_argument", 
                   "named_argument", "expression", "ternary_op_exp", "implication", 
                   "disjunction", "conjunction", "inversion", "relation", 
                   "relational_op", "sum_exp", "additive_op", "term", "multiplicative_op", 
                   "factor", "postfix_exp", "field_access", "primary_exp", 
                   "value_exp", "list_constructor", "range_constructor", 
                   "string_literal", "bool_literal", "integer_literal", 
                   "uint_literal", "hex_uint_literal", "float_literal", 
                   "identifier", "physical_literal", "unit_name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    STRING_LITERAL=92
    SHORTSTRING=93
    LONGSTRING=94
    BOOL_LITERAL=95
    INTEGER_LITERAL=96
    UINT_LITERAL=97
    HEX_UINT_LITERAL=98
    INT_LITERAL=99
    DIGIT=100
    HEX_DIGIT=101
    FLOAT_LITERAL=102
    IDENTIFIER=103
    PHYSICAL_LITERAL=104
    UNIT_NAME=105
    LINEJOINER=106
    NEWLINE=107
    WS=108
    COMMENT=109
    INDENT=110
    DEDENT=111

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Osc_fileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(openscenario2Parser.EOF, 0)

        def prelude_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(openscenario2Parser.Prelude_statementContext)
            else:
                return self.getTypedRuleContext(openscenario2Parser.Prelude_statementContext,i)


        def osc_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(openscenario2Parser.Osc_declarationContext)
            else:
                return self.getTypedRuleContext(openscenario2Parser.Osc_declarationContext,i)


        def getRuleIndex(self):
            return openscenario2Parser.RULE_osc_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOsc_file" ):
                listener.enterOsc_file(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOsc_file" ):
                listener.exitOsc_file(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOsc_file" ):
                return visitor.visitOsc_file(self)
            else:
                return visitor.visitChildren(self)




    def osc_file(self):

        localctx = openscenario2Parser.Osc_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_osc_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 269
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==openscenario2Parser.T__0:
                self.state = 266
                self.prelude_statement()
                self.state = 271
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 275
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << openscenario2Parser.T__9) | (1 << openscenario2Parser.T__11) | (1 << openscenario2Parser.T__27) | (1 << openscenario2Parser.T__31) | (1 << openscenario2Parser.T__34) | (1 << openscenario2Parser.T__35) | (1 << openscenario2Parser.T__36) | (1 << openscenario2Parser.T__37))) != 0):
                self.state = 272
                self.osc_declaration()
                self.state = 277
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 278
            self.match(openscenario2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Prelude_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def import_statement(self):
            return self.getTypedRuleContext(openscenario2Parser.Import_statementContext,0)


        def getRuleIndex(self):
            return openscenario2Parser.RULE_prelude_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrelude_statement" ):
                listener.enterPrelude_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrelude_statement" ):
                listener.exitPrelude_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrelude_statement" ):
                return visitor.visitPrelude_statement(self)
            else:
                return visitor.visitChildren(self)




    def prelude_statement(self):

        localctx = openscenario2Parser.Prelude_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prelude_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 280
            self.import_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Import_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def import_reference(self):
            return self.getTypedRuleContext(openscenario2Parser.Import_referenceContext,0)


        def NEWLINE(self):
            return self.getToken(openscenario2Parser.NEWLINE, 0)

        def getRuleIndex(self):
            return openscenario2Parser.RULE_import_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_statement" ):
                listener.enterImport_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_statement" ):
                listener.exitImport_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_statement" ):
                return visitor.visitImport_statement(self)
            else:
                return visitor.visitChildren(self)




    def import_statement(self):

        localctx = openscenario2Parser.Import_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_import_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 282
            self.match(openscenario2Parser.T__0)
            self.state = 283
            self.import_reference()
            self.state = 284
            self.match(openscenario2Parser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Import_referenceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string_literal(self):
            return self.getTypedRuleContext(openscenario2Parser.String_literalContext,0)


        def structured_identifier(self):
            return self.getTypedRuleContext(openscenario2Parser.Structured_identifierContext,0)


        def getRuleIndex(self):
            return openscenario2Parser.RULE_import_reference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_reference" ):
                listener.enterImport_reference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_reference" ):
                listener.exitImport_reference(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_reference" ):
                return visitor.visitImport_reference(self)
            else:
                return visitor.visitChildren(self)




    def import_reference(self):

        localctx = openscenario2Parser.Import_referenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_import_reference)
        try:
            self.state = 288
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [openscenario2Parser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 286
                self.string_literal()
                pass
            elif token in [openscenario2Parser.T__0, openscenario2Parser.T__11, openscenario2Parser.T__56, openscenario2Parser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 287
                self.structured_identifier()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Structured_identifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(openscenario2Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(openscenario2Parser.IdentifierContext,i)

